# omnidict

./: .gitignore  CONTRIBUTING.md  DESCRIPTION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: release.yml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yaml  cicd.yaml  test-report.yaml
data/dictionary.cambridge.org/: index.html
locales/en-GB/LC_MESSAGES/: dictionary.po
locales/en-US/LC_MESSAGES/: dictionary.po
locales/zh-CN/LC_MESSAGES/: dictionary.po
locales/zh-TW/LC_MESSAGES/: dictionary.po
scripts/: compile_portable_objects.py
src/cambridge_dictionary/: __init__.py  browser.py  cambridge.py  config.json  dictionary.py  editor.py  globals.py  test_cambridge.py  translation.py
src/cambridge_dictionary/assets/: definition.css
src/cambridge_dictionary/provider/: __init__.py  cambridge.py  common.py  manager.py
src/cambridge_dictionary/provider/cambridge/: __init__.py  chinese_dictionary.py  provider.py
src/cambridge_dictionary/user_files/: target_languages.json
src/omnidict/: __init__.py  config.md  editor.py  globals.py  manifest.json
src/omnidict/provider/: __init__.py  _providers.py  cambridge.py  common.py  manager.py
src/omnidict/web/: editor.css
testdata/dictionary.cambridge.org/dictionary/english-chinese-simplified/: flash.json
testdata/dictionary.cambridge.org/dictionary/english-chinese-traditional/: CPU.html  CPU.json  bug.json  flash.html  flash.json  fuck.html  fuck.json  man.html  man.json  reborn.json  record.html  record.json  slash.html  slash.json
tests/: conftest.py
tests/cambridge_dictionary/: test_cambridge.py
tests/data/dictionary.cambridge.org/dictionary/english-chinese-simplified/: flash.html  flash.json
tests/data/dictionary.cambridge.org/dictionary/english-chinese-traditional/: bug.html  bug.json  corpus.html  corpus.json  fuck.json  man.json  reborn.html  reborn.json
tests/omnidict/provider/: conftest.py  definition.py  test_provider.py
tests/omnidict/provider/cambridge-dictionary/: spec.yaml
tests/omnidict/provider/cambridge-dictionary/english-chinese-simplified/: flash.json  flash.yaml
tests/omnidict/provider/cambridge-dictionary/english-chinese-traditional/: CPU.json  (+21 more)
