[project]
name = "omnidict"
version = "0.1.0"
description = "The only one Anki dictionary add-on you'll ever need."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserforge[all]>=1.2.4",
]

[dependency-groups]
dev = [
    "aqt[qt]>=25.9.4",
    "beautifulsoup4==4.14.3",
    "jsonpickle>=4.1.2",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "requests==2.33.1",
]

[tool.pytest]
strict = true
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
