[project]
name = "omnidict"
version = "0.1.0"
description = "The only one Anki dictionary add-on you'll ever need."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserforge[all]>=1.2.4",
]

[dependency-groups]
provided = [
    "aqt[qt]>=25.7",
    # Specify dependecies and their transitive dependencies that are also provided by Anki runtime
    # The version specifiers should be the same as those provided by supported Anki versions
    "beautifulsoup4>=4.13.4,<=4.14.3",
    "click>=8.1.8,<=8.3.1",
    "orjson>=3.10.8,<=3.11.8",
    "requests>=2.32.4,<=2.33.1",
]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.46",
    "vcrpy>=8.1.1",
    { include-group = "provided" },
]

[tool.pytest]
strict = true
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "generatetestdata: mark a test as one that generates test data",
]
